Harden Java 22 project structure and runtime